--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
             "email": "ibexa@users.noreply.github.com"
         }
     ],
+    "replace": {
+        "ezsystems/ezplatform-code-style": "*"
+    },
     "require": {
         "php": ">=7.1",
         "friendsofphp/php-cs-fixer": "^3.0",
