--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,9 @@
+includes:
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
+
 parameters:
-    level: max
+    level: 8
+    treatPhpDocTypesAsCertain: false
+    checkMissingCallableSignature: true
     paths:
         - src
