--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Run PHPStan analysis
         run: composer run-script phpstan
 
-      - name: Run code style check
+      - name: Run tests suite
         run: composer run-script test
 
       - name: Run code style check
