--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,5 +40,8 @@ jobs:
       - name: Run PHPStan analysis
         run: composer run-script phpstan
 
+      - name: Run tests suite
+        run: composer run-script test
+
       - name: Run code style check
         run: composer run-script check-cs -- --format=checkstyle | cs2pr
