--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php": ">=7.4",
         "friendsofphp/php-cs-fixer": "v3.75.0",
-        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0"
+        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
+        "composer-runtime-api": ">=2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
