--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php": ">=7.4",
         "friendsofphp/php-cs-fixer": "v3.75.0",
-        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0"
+        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
+        "composer-runtime-api": ">=2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
@@ -29,7 +30,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Ibexa\\Tests\\CodeStyle\\PhpCsFixer\\": "tests/lib/"
+            "Ibexa\\Tests\\CodeStyle\\": "tests/lib/"
         }
     },
     "scripts": {
