[CI] Fixed SonarCloud code duplication exclusion config

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,2 @@
-sonar.exclusions=tests/lib/Sets/expected_rules/**/*
+# Exclude files from duplication detection
+sonar.cpd.exclusions=tests/lib/PhpCsFixer/Sets/expected_rules/**
